Initial repo content

--- a/index.html
+++ b/index.html
@@ -1,38 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Spec proposal</title>
+    <title>JSON-LD 1.1 Best Practices</title>
     <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove"></script>
+    <script type="text/javascript" src="common/common.js" class="remove" defer></script>
+    <script type="text/javascript" src="common/jsonld.js" class="remove"></script>
     <script class='remove'>
-      // See https://github.com/w3c/respec/wiki/ for how to configure ReSpec
-      var respecConfig = {
-        specStatus: "CG-DRAFT",
-        shortName: "json-ld-bp",
-        editors: [{
-          name: "Ivan Herman"
-        }]
-      };
+        // See https://github.com/w3c/respec/wiki/ for how to configure ReSpec
+        var respecConfig = {
+            localBiblio:       jsonld.localBiblio,
+            specStatus:        "ED",
+            copyrightStart:    "2019",
+            shortName:         "json-ld-bp",
+            github:            "https://github.com/w3c/json-ld-bp/",
+            edDraftURI:        "https://w3c.github.io/json-ld-bp/",
+            includePermalinks: true,
+            doJsonLd:          true,
+            pluralize:         true,
+            editors: [{
+                name: "Somebody..."
+            }],
+            // name of the WG
+            wg:                "JSON-LD Working Group",
+
+            // URI of the public WG page
+            wgURI:             "https://www.w3.org/2018/json-ld-wg/",
+
+            // name (with the @w3c.org) of the public mailing to which comments are due
+            wgPublicList:       "public-json-ld-wg",
+            processVersion:     2018,
+            maxTocLevel:        4,
+            noRecTrack:         "true"
+        };
     </script>
-  </head>
-  <body>
+</head>
+
+<body>
     <section id="abstract">
-      <p>
-        This specification does neat stuff.
-      </p>
+        <p>
+            This specification does neat stuff.
+        </p>
     </section>
     <section id="sotd">
-      <p>
-        This is an unofficial proposal.
-      </p>
+        <p>
+            This is an unofficial proposal.
+        </p>
     </section>
 
     <section id="introduction">
-      <h2>Introduction</h2>
-      <p>
-        See <a href="https://github.com/w3c/respec/wiki/User's-Guide">ReSpec's user guide</a>
-        for how toget started!
-      </p>
+        <h2>Introduction</h2>
     </section>
-  </body>
+</body>
+
 </html>
