--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
     <section>
       <h2>Resource Representation</h2>
-      <div class="practice">
-        <p><span id="use-json" class="practicelab">Publish data using developer friendly JSON</span></p>
+      <section>
+        <h3 id="use-json">Publish data using developer friendly JSON</h3>
         <p class="practicedesc">JSON [[json]] is the most popular format for publishing data through APIs; developers like it, it is easy to parse, and it is supported natively in most programming languages.</p>
         <pre class="example" title="Example JSON representing a Person">
           {
@@ -100,10 +100,10 @@
             "jobTitle": "44th President of the United States"
           }
         </pre>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="use-json-ld" class="practicelab">Use well-known identifiers when describing data</span></p>
+      <section>
+        <h3 id="use-json-ld">Use well-known identifiers when describing data</h3>
         <p class="practicedesc">By sticking to basic JSON data expression, and providing a <a>JSON-LD Context</a>, all keys used within a JSON document can have unambigious meaning, as they bind to URLs which describe their meaning.</p>
         <pre class="example" title="Example JSON-LD identifying a person">
           {
@@ -128,30 +128,30 @@
           </pre>
           <p>Expanded form is not useful as is, but is necessary for performing further algorithmic transformations of JSON-LD data and is useful when validating that JSON-LD entity descriptions say what the publisher means.</p>
         </div>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="cache-context" class="practicelab">Cache JSON-LD Contexts</span></p>
+      <section>
+        <h3 id="cache-context">Cache JSON-LD Contexts</h3>
         <p class="practicedesc">While most use of JSON-LD should not require a client to change the data representation, JSON-LD does allow the use of various algorithms to re-shape a JSON-LD document. These require the use of the <a>JSON-LD Context</a>, which is typically represented using a link to a remote document. Because it is remote, processing time can be severely impacted by the time it takes to retrieve this context. Services providing a <a>JSON-LD Context</a> SHOULD set HTTP cache-control headers to allow liberal caching of such contexts, and clients SHOULD attempt to use a locally cached version of these documents. Typically, libraries used to process JSON-LD documents should do this for you. (See also [[json-ld-best-practice-caching]]).</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="top-level-object" class="practicelab">Use a top-level object</span></p>
+      <section>
+        <h3 id="top-level-object">Use a top-level object</h3>
         <p class="practicedesc">JSON documents may be in the form of a object, or an array of objects. For most purposes, developers need a single entry point, so the JSON SHOULD be in the form of a single top-level object</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="native-values" class="practicelab">Use native values</span></p>
+      <section>
+        <h3 id="native-values">Use native values</h3>
         <p class="practicedesc">When possible, property values SHOULD use native JSON datatypes such as numbers (<em>integer</em>, <em>decimal</em> and <em>floating point</em>) and booleans (<code>true</code> and <code>false</code>).</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="unordered-values" class="practicelab">Assume arrays are unordered</span></p>
+      <section>
+        <h3 id="unordered-values">Assume arrays are unordered</h3>
         <p class="practicedesc">JSON specifies that the values in an array are ordered, however in many cases arrays are also used for values which are unordered. Unless specified within the <a>JSON-LD Context</a>, multiple array values SHOULD be presumed to be unordered. (See <cite><a href="http://www.w3.org/TR/json-ld/#lists-and-sets">Lists and Sets</a></cite> in [[JSON-LD]]).</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="typed-objects" class="practicelab">Provide one or more types for JSON objects</span></p>
+      <section>
+        <h3 id="typed-objects">Provide one or more types for JSON objects</h3>
         <p class="practicedesc">Principles of <a>Linked Data</a> dictate that messages SHOULD be self describing, which includes adding a <code>type</code> to such messages.</p>
         <p>Many APIs use JSON messages where the type of information being conveyed is inferred from the retrieval endpoint. For example, when retrieving information about a Github Commit, you might see the following response:</p>
         <pre class="example" title="Github Commit message">
@@ -193,10 +193,10 @@
             "jobTitle": "44th President of the United States"
           }
         </pre>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="use-ids" class="practicelab">Identify objects with a unique identifier</span></p>
+      <section>
+        <h3 id="use-ids">Identify objects with a unique identifier</h3>
         <p class="practicedesc">Entities described in JSON objects often describe web resources having a URL; entity descriptions SHOULD use an identifier uniquely identifying that entity. In this case, using the resource location as the identity of the object is consistent with this practice.</p>
         <pre class="example" title="Example JSON-LD identifying a person">
           {
@@ -210,16 +210,16 @@
           }
         </pre>
         <p class="note">There is often ambiguous if an identifier is about the entity being described, or directly represents that entity. As an example, Barack Obama may have a Wikidata entry <code>http://www.wikidata.org/entity/Q76</code>, but it would be a mistake to say that <code>http://www.wikidata.org/entity/Q76</code> <em>is</em> Barack Obama. However, it is common to use this pattern, particularly if the <strong>type</strong> of the entity describes a Person, rather than a WebPage.</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="dereferencable-entities" class="practicelab">Provide a representation of the entity related by URL</span></p>
+      <section>
+        <h3 id="dereferencable-entities">Provide a representation of the entity related by URL</h3>
         <p class="practicedesc">When dereferencing an entity related via a URL, the location SHOULD provide a representation of that entity. (This practices replicates that described in [[ld-bp]] <cite><a href="http://www.w3.org/TR/ld-bp/#uri-design-principles">Provide at least one machine-readable representation of the resource identified by the URI</a></cite>)</p>
         <p>Corollaries to this best practice is that Cool URIs don't change [[cooluris]], meaning that URLs describing entities SHOULD be stable and not depend on variable information. Also, the URL used to identify an entity is the best API endpoint of that entity (see also <a href="#api-versioning" class="sectionRef"></a>).</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="type-links" class="practicelab">External references should use typed term</span></p>
+      <section>
+        <h3 id="type-links">External references should use typed term</h3>
         <p class="practicedesc">When using a property intended to reference another entity, properties SHOULD be defined to type string values as being references.</p>
         <p>For example, the <code>schema:image</code> property a Thing to an Image:</p>
         <pre class="example" title="Example typed relationship">
@@ -259,10 +259,10 @@
             "image": "https://commons.wikimedia.org/wiki/File:President_Barack_Obama.jpg"
           }
         </pre>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="embed-objects" class="practicelab">Nest referenced inline objects</span></p>
+      <section>
+        <h3 id="embed-objects">Nest referenced inline objects</h3>
         <p class="practicedesc">When multiple related entity descriptions are provided inline, related entities SHOULD be nested.</p>
         <p>For example, when relating one entity to another, where the related entity is described in the same message:</p>
         <pre class="example" title="Nested relationships">
@@ -283,10 +283,10 @@
           }
         </pre>
         <p class="note">In this example, the <code>spouse</code> relationship is bi-directional, we have arbitrarily rooted the message with Barack Obama, and created a symetric relationship from Michelle back to Barack by reference, rather than by nesting.</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="things-not-strings" class="practicelab">Things not strings</span></p>
+      <section>
+        <h3 id="things-not-strings">Things not strings</h3>
         <p class="practicedesc">When describing attributes, entity references SHOULD be used instead of string literals.</p>
         <p>In some cases, when describing an attribute of an entity, it is tempting to using string values which have no independent meaning. Such values often are used for well known things. A JSON-LD context can define a term for such values, which allow them to appear as strings within the message, but be associated with specific identifiers. In this case, the property must be defined with type <code>@vocab</code> so that values will be interpreted relative to a vocabulary rather than the file location.</p>
         <pre class="example" title="Example enumerated value">
@@ -304,18 +304,18 @@
           }
         </pre>
         <p>See article in SEO Skeptic [[seo-strings-to-things]] for further elaboration on the advantages of using <em>things</em> instead of <em>strings</em>.</p>
-      </div>
+      </section>
 
-      <div class="practice">
-        <p><span id="reverse-references" class="practicelab">When describing an inverse relationship, use a referenced property</span></p>
+      <section>
+        <h3 id="reverse-references">When describing an inverse relationship, use a referenced property</h3>
         <p class="practicedesc"></p>
-      </div>
+      </section>
 
       <!--
-      <div class="practice">
-        <p><span id="xxx" class="practicelab"></span></p>
+      <section>
+        <h3 id="xxx"></h3>
         <p class="practicedesc"></p>
-      </div>
+      </section>
       -->
     </section>
 
