Add new sections to top of document
Will fill them in over the subsequent commits

--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
     </dl>
     </section>
 
+
+    <section>
+      <h2>Authoring</h2>
+
+      <section>
+        <h3>Contexts</h3>
+      </section>
+
+      <section>
+        <h3>Data Documents</h3>
+      </section>
+    </section>
+
+    <section>
+      <h2>Publishing</h2>
+    </section>
+
+    <section>
+      <h2>Consuming</h2>
+    </section>
+
     <section>
       <h2>Resource Representation</h2>
       <section>
