Emphasize JSON instead of data publishing
https://github.com/w3c/json-ld-bp/issues/21

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         Key among these is the notion of vocabulary re-use, so that each endpoint does not need to separately describe the properties and structure of their JSON documents. Schema.org provides a great example of doing this, and includes an extension mechanism that may already be familiar to API designers.
       </p>
       <p>
-        This note expands on <cite><a href="http://www.w3.org/TR/dwbp/">Data on the Web Best Practices</a></cite> [[dwbp]] and <cite><a href="http://www.w3.org/TR/ld-bp/">Best Practices for Publishing Linked Data</a></cite> [[ld-bp]].
+        <a>JSON-LD</a> is JSON, and good JSON-LD is first and foremost good JSON. Since it is also <a>Linked Data</a>, developers and especially data publishers may find further useful advice at <cite><a href="http://www.w3.org/TR/dwbp/">Data on the Web Best Practices</a></cite> [[dwbp]] and <cite><a href="http://www.w3.org/TR/ld-bp/">Best Practices for Publishing Linked Data</a></cite> [[ld-bp]].
       </p>
     </section>
 
