Apply suggestions from code review
Co-Authored-By: A. Soroka <ajs6f@apache.org>

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
 
       <section>
         <h3 id="context-order">Ordering of array elements</h3>
-        <p class="practicedesc">By default, arrays in <a class="externalDFN" href="https://www.w3.org/TR/json-ld/#sets-and-lists">JSON-LD do not convey any ordering of contained elements</a>.
+        <p class="practicedesc">By default, <a class="externalDFN" href="https://www.w3.org/TR/json-ld/#sets-and-lists">arrays in JSON-LD do not convey any ordering of contained elements</a>.
         However, for the processing of contexts, the ordering of elements in arrays <em>does</em> matter.
-        As such, when writing array-based contexts, this fact SHOULD be kept in mind.</p>
+        As such, when writing array-based contexts, this fact should be kept in mind.</p>
         <p>Ordered contexts in arrays allow inheritance and overriding of context entries.
         When processing the following example, the first <code>name</code> entry will be overridden by the second <code>name</code> entry.</p>
         <pre class="example" title="Overriding name term">
