--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>JSON-LD Best Practices</title>
     <meta charset='utf-8'>
-     <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove" defer></script>
+    <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
     <script type="text/javascript" src="common/common.js" class="remove" defer></script>
     <script type="text/javascript" src="common/jsonld.js" class="remove"></script>
     <script class='remove'>
@@ -13,19 +13,19 @@
         copyrightStart:    "2019",
         shortName:  "json-ld-bp",
         edDraftURI: "https://w3c.github.io/json-ld-bp/",
-        github:            "https://github.com/w3c/json-ld-bp/",
+        github:     "https://github.com/w3c/json-ld-bp/",
         editors: [{
           name: "Gregg Kellogg",
           url: "http://greggkellogg.net/",
           w3cid: "44770"
         }],
-        //previousMaturity: "FPWD",
+        //previousMaturity: "NOTE",
         //previousPublishDate: "1977-03-15",
-        wg:           "JSON-LD Working Group",
-        wgURI:        "https://www.w3.org/2018/json-ld-wg/",
+        github:     "https://github.com/json-ld/json-ld-star/",
+        doJsonLd:   true,
         wgPublicList: "public-json-ld-wg",
-        maxTocLevel:        4,
-        noRecTrack:         "true"
+        maxTocLevel:  4,
+        noRecTrack:   "true"
       };
     </script>
   </head>
@@ -37,12 +37,15 @@
     </section>
 
     <section id='sotd'>
-      <p>
-        This is an unofficial proposal.
-      </p>
+    <p>This unofficial document has been developed by the
+      <a href="https://www.w3.org/2018/json-ld-wg/">JSON-LD Working Group</a>.</p>
     </section>
 
-    <section>
+  <section id="conformance">
+    <p>This document descirbes best practices for generating JSON-LD. Where normative language is used, it should be considered advisory.</p>
+  </section>
+
+    <section class="informative">
       <h2>Introduction</h2>
       <p>
         Coming up with a data format for your API is a common problem. It can be hard to choose between different data representations, what names you want to pick, and even harder if you want to leave room for extensibility. How do you make all these decisions? How do you make your API easy to use so people can use short strings to reference common things, but URLs to enable people to come up with their own so it isn't limiting? How can you make it easy for other people to add their own data in and make it interoperable? How do you consume data from other similar apps? There are technologies that can help you do this. EXAMPLES. Now, it isn't perfect – sometimes it won't solve your problem, but it could maybe solve a lot of them.
@@ -69,7 +72,8 @@
 
     <section id='bp-summary'></section>
 
-    <section>
+    <section class="informative">
+
     <h2>Terminology</h2>
     <dl class="termlist">
       <dt><dfn>JSON-LD</dfn></dt>
@@ -89,12 +93,14 @@
 
 
 
-    <section>
+    <section class="informative">
       <h2>Data Documents</h2>
 
-      <section>
-        <h3 id="use-json">Publish data using developer friendly JSON</h3>
-        <p class="practicedesc">JSON [[json]] is the most popular format for publishing data through APIs; developers like it, it is easy to parse, and it is supported natively in most programming languages.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span id="use-json" class="practicelab">Publish data using developer friendly JSON</span>
+          JSON [[json]] is the most popular format for publishing data through APIs; developers like it, it is easy to parse, and it is supported natively in most programming languages.
+        </p>
         <pre class="example" title="Example JSON representing a Person">
           {
             "name": "Barack Obama",
@@ -103,26 +109,32 @@
             "jobTitle": "44th President of the United States"
           }
         </pre>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="top-level-object">Use a top-level object</h3>
-        <p class="practicedesc">JSON documents may be in the form of a object, or an array of objects. For most purposes, developers need a single entry point, so the JSON SHOULD be in the form of a single top-level object</p>
-      </section>
+      <div class="practice">
+        <p class="practicedesc">
+          <span id="top-level-object" class="practicelab">Use a top-level object</span>
+          JSON documents may be in the form of a object, or an array of objects. For most purposes, developers need a single entry point, so the JSON SHOULD be in the form of a single top-level object.
+        </p>
+      </div>
 
-      <section>
-        <h3 id="native-values">Use native values</h3>
-        <p class="practicedesc">When possible, property values SHOULD use native JSON datatypes such as numbers (<em>integer</em>, <em>decimal</em> and <em>floating point</em>) and booleans (<code>true</code> and <code>false</code>).</p>
-      </section>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="native-values">Use native values</span>
+          When possible, property values SHOULD use native JSON datatypes such as numbers (<em>integer</em>, <em>decimal</em> and <em>floating point</em>) and booleans (`true` and `false`).
+        </p>
+      </div>
 
-      <section>
-        <h3 id="unordered-values">Assume arrays are unordered</h3>
-        <p class="practicedesc">JSON specifies that the values in an array are ordered, however in many cases arrays are also used for values which are unordered. Unless specified within the <a>JSON-LD Context</a>, multiple array values SHOULD be presumed to be unordered. (See <cite><a href="http://www.w3.org/TR/json-ld/#lists-and-sets">Lists and Sets</a></cite> in [[JSON-LD]]).</p>
-      </section>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="unordered-values">Assume arrays are unordered</span>
+          JSON specifies that the values in an array are ordered, however in many cases arrays are also used for values which are unordered. Unless specified within the <a>JSON-LD Context</a>, multiple array values SHOULD be presumed to be unordered. (See <cite><a href="http://www.w3.org/TR/json-ld/#lists-and-sets">Lists and Sets</a></cite> in [[JSON-LD]]).</p>
+      </div>
 
-      <section>
-        <h3 id="use-json-ld">Use well-known identifiers when describing data</h3>
-        <p class="practicedesc">By sticking to basic JSON data expression, and providing a <a>JSON-LD Context</a>, all keys used within a JSON document can have unambigious meaning, as they bind to URLs which describe their meaning.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="use-json-ld">Use well-known identifiers when describing data</span>
+          By sticking to basic JSON data expression, and providing a <a>JSON-LD Context</a>, all keys used within a JSON document can have unambigious meaning, as they bind to URLs which describe their meaning.</p>
         <pre class="example" title="Example JSON-LD identifying a person">
           {
             <strong>"@context": "http://schema.org"</strong>,
@@ -146,11 +158,12 @@
           </pre>
           <p>Expanded form is not useful as is, but is necessary for performing further algorithmic transformations of JSON-LD data and is useful when validating that JSON-LD entity descriptions say what the publisher means.</p>
         </div>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="typed-objects">Provide one or more types for JSON objects</h3>
-        <p class="practicedesc">Principles of <a>Linked Data</a> dictate that messages SHOULD be self describing, which includes adding a <code>type</code> to such messages.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="typed-objects">Provide one or more types for JSON objects</span>
+          Principles of <a>Linked Data</a> dictate that messages SHOULD be self describing, which includes adding a <code>type</code> to such messages.</p>
         <p>Many APIs use JSON messages where the type of information being conveyed is inferred from the retrieval endpoint. For example, when retrieving information about a Github Commit, you might see the following response:</p>
         <pre class="example" title="Github Commit message">
           {
@@ -191,11 +204,12 @@
             "jobTitle": "44th President of the United States"
           }
         </pre>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="use-ids">Identify objects with a unique identifier</h3>
-        <p class="practicedesc">Entities described in JSON objects often describe web resources having a URL; entity descriptions SHOULD use an identifier uniquely identifying that entity. In this case, using the resource location as the identity of the object is consistent with this practice.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="use-ids">Identify objects with a unique identifier</span>
+          Entities described in JSON objects often describe web resources having a URL; entity descriptions SHOULD use an identifier uniquely identifying that entity. In this case, using the resource location as the identity of the object is consistent with this practice.</p>
         <pre class="example" title="Example JSON-LD identifying a person">
           {
             "@context": "http://schema.org",
@@ -208,11 +222,12 @@
           }
         </pre>
         <p class="note">There is often ambiguous if an identifier is about the entity being described, or directly represents that entity. As an example, Barack Obama may have a Wikidata entry <code>http://www.wikidata.org/entity/Q76</code>, but it would be a mistake to say that <code>http://www.wikidata.org/entity/Q76</code> <em>is</em> Barack Obama. However, it is common to use this pattern, particularly if the <strong>type</strong> of the entity describes a Person, rather than a WebPage.</p>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="things-not-strings">Things not strings</h3>
-        <p class="practicedesc">When describing attributes, entity references SHOULD be used instead of string literals.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="things-not-strings">Things not strings</span>
+          When describing attributes, entity references SHOULD be used instead of string literals.</p>
         <p>In some cases, when describing an attribute of an entity, it is tempting to using string values which have no independent meaning. Such values are often used for well known things. A JSON-LD context can define a term for such values, which allow them to appear as strings within the message, but be associated with specific identifiers. In this case, the property must be defined with type <code>@vocab</code> so that values will be interpreted relative to a vocabulary rather than the file location.</p>
         <pre class="example" title="Example enumerated value">
           {
@@ -229,12 +244,12 @@
           }
         </pre>
         <p>See article in SEO Skeptic [[seo-strings-to-things]] for further elaboration on the advantages of using <em>things</em> instead of <em>strings</em>.</p>
-      </section>
+      </div>
 
-
-      <section>
-        <h3 id="embed-objects">Nest referenced inline objects</h3>
-        <p class="practicedesc">When multiple related entity descriptions are provided inline, related entities SHOULD be nested.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="embed-objects">Nest referenced inline objects</span>
+          When multiple related entity descriptions are provided inline, related entities SHOULD be nested.</p>
         <p>For example, when relating one entity to another, where the related entity is described in the same message:</p>
         <pre class="example" title="Nested relationships">
           {
@@ -254,20 +269,23 @@
           }
         </pre>
         <p class="note">In this example, the <code>spouse</code> relationship is bi-directional, we have arbitrarily rooted the message with Barack Obama, and created a symetric relationship from Michelle back to Barack by reference, rather than by nesting.</p>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="reverse-references">When describing an inverse relationship, use a referenced property</h3>
-        <p class="practicedesc"></p>
-      </section>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="reverse-references">When describing an inverse relationship, use a referenced property</span>
+          FIXME
+        </p>
+      </div>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>Contexts</h2>
 
-      <section>
-        <h3 id="type-links">External references should use typed term</h3>
-        <p class="practicedesc">When using a property intended to reference another entity, properties SHOULD be defined to type string values as being references.</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="type-links">External references should use typed term</span>
+          When using a property intended to reference another entity, properties SHOULD be defined to type string values as being references.</p>
         <p>For example, the <code>schema:image</code> property a Thing to an Image:</p>
         <pre class="example" title="Example typed relationship">
           {
@@ -306,11 +324,12 @@
             "image": "https://commons.wikimedia.org/wiki/File:President_Barack_Obama.jpg"
           }
         </pre>
-      </section>
+      </div>
 
-      <section>
-        <h3 id="context-order">Ordering of array elements</h3>
-        <p class="practicedesc">By default, <a class="externalDFN" href="https://www.w3.org/TR/json-ld/#sets-and-lists">arrays in JSON-LD do not convey any ordering of contained elements</a>.
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="context-order">Ordering of array elements</span>
+          By default, <a class="externalDFN" href="https://www.w3.org/TR/json-ld/#sets-and-lists">arrays in JSON-LD do not convey any ordering of contained elements</a>.
         However, for the processing of contexts, the ordering of elements in arrays <em>does</em> matter.
         As such, when writing array-based contexts, this fact should be kept in mind.</p>
         <p>Ordered contexts in arrays allow inheritance and overriding of context entries.
@@ -370,46 +389,48 @@
             <strong>"name": "Barack Obama"</strong>
           }
         </pre>
-      </section>
+      </div>
     </section>
 
 
-    <section>
+    <section class="informative">
       <h2>Publishing</h2>
 
-      <section>
-        <h3 id="dereferencable-entities">Provide a representation of the entity related by URL</h3>
-        <p class="practicedesc">When dereferencing an entity related via a URL, the location SHOULD provide a representation of that entity. (This practices replicates that described in [[ld-bp]] <cite><a href="http://www.w3.org/TR/ld-bp/#uri-design-principles">Provide at least one machine-readable representation of the resource identified by the URI</a></cite>)</p>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="dereferencable-entities">Provide a representation of the entity related by URL</span>
+          When dereferencing an entity related via a URL, the location SHOULD provide a representation of that entity. (This practices replicates that described in [[ld-bp]] <cite><a href="http://www.w3.org/TR/ld-bp/#uri-design-principles">Provide at least one machine-readable representation of the resource identified by the URI</a></cite>)</p>
         <p>Corollaries to this best practice is that Cool URIs don't change [[cooluris]], meaning that URLs describing entities SHOULD be stable and not depend on variable information. Also, the URL used to identify an entity is the best API endpoint of that entity (see also <a href="#api-versioning" class="sectionRef"></a>).</p>
-      </section>
+      </div>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>Consuming</h2>
 
-      <section>
-        <h3 id="cache-context">Cache JSON-LD Contexts</h3>
-        <p class="practicedesc">While most use of JSON-LD should not require a client to change the data representation, JSON-LD does allow the use of various algorithms to re-shape a JSON-LD document. These require the use of the <a>JSON-LD Context</a>, which is typically represented using a link to a remote document. Because it is remote, processing time can be severely impacted by the time it takes to retrieve this context. Services providing a <a>JSON-LD Context</a> SHOULD set HTTP cache-control headers to allow liberal caching of such contexts, and clients SHOULD attempt to use a locally cached version of these documents. Typically, libraries used to process JSON-LD documents should do this for you. (See also [[json-ld-best-practice-caching]]).</p>
-      </section>
+      <div class="practice">
+        <p class="practicedesc">
+          <span class="practicelab" id="cache-context">Cache JSON-LD Contexts</span>
+          While most use of JSON-LD should not require a client to change the data representation, JSON-LD does allow the use of various algorithms to re-shape a JSON-LD document. These require the use of the <a>JSON-LD Context</a>, which is typically represented using a link to a remote document. Because it is remote, processing time can be severely impacted by the time it takes to retrieve this context. Services providing a <a>JSON-LD Context</a> SHOULD set HTTP cache-control headers to allow liberal caching of such contexts, and clients SHOULD attempt to use a locally cached version of these documents. Typically, libraries used to process JSON-LD documents should do this for you. (See also [[json-ld-best-practice-caching]]).</p>
+      </div>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>Serializing Large Collections</h2>
       <p class="ednote">Describe schema.org extension using Role sub-class, Hydra collections, and LDP collections.</p>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>Reuse Vocabularies</h2>
       <p class="ednote">Focus on schema.org?</p>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>Describe API affordances</h2>
       <p class="ednote">Describe the use of schema.org Actions and work in Hydra.</p>
       <p class="ednote">Describe anti-pattern of URI construction emphasizing affordances.</p>
     </section>
 
-    <section>
+    <section class="informative">
       <h2>API Versioning</h2>
       <p class="ednote">Remember that Cool URIs don't change [cooluris]; correctly modeling data allows changes data representation to be limited.</p>
       <p class="ednote">Describe the use of API keys for controlling API versions, rather than the use of different versioned URLs.</p>
