Update github branch in config.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         copyrightStart:    "2019",
         shortName:  "json-ld-bp",
         edDraftURI: "https://w3c.github.io/json-ld-bp/",
-        github:     "https://github.com/w3c/json-ld-bp/",
+        github: {
+          repoURL: "https://github.com/w3c/json-ld-bp/",
+          branch: "main"
+        },
         editors: [{
           name: "Gregg Kellogg",
           url: "http://greggkellogg.net/",
@@ -21,7 +24,10 @@
         }],
         //previousMaturity: "NOTE",
         //previousPublishDate: "1977-03-15",
-        github:     "https://github.com/w3c/json-ld-bp/",
+        github: {
+          repoURL: "https://github.com/w3c/json-ld-bp/",
+          branch: "main"
+        },
         doJsonLd:   true,
         wgPublicList: "public-json-ld-wg",
         maxTocLevel:  4,
