Update specStatus to "NOTE" and add "group" config.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script class='remove'>
       var respecConfig = {
         localBiblio: jsonld.localBiblio,
-        specStatus: "WG-NOTE",
+        specStatus: "NOTE",
         copyrightStart:    "2019",
         shortName:  "json-ld-bp",
         edDraftURI: "https://w3c.github.io/json-ld-bp/",
@@ -29,6 +29,7 @@
           branch: "main"
         },
         doJsonLd:   true,
+        group: "wg/json-ld",
         wgPublicList: "public-json-ld-wg",
         maxTocLevel:  4,
         noRecTrack:   true
