Change status to DNOTE.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script class='remove'>
       var respecConfig = {
         localBiblio: jsonld.localBiblio,
-        specStatus: "NOTE",
+        specStatus: "DNOTE",
         copyrightStart:    "2019",
         shortName:  "json-ld-bp",
         edDraftURI: "https://w3c.github.io/json-ld-bp/",
