--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         localBiblio: jsonld.localBiblio,
         specStatus: "unofficial",
         copyrightStart:    "2019",
-        shortName:  "json-ld-bp",
+        //shortName:  "json-ld-bp",
         edDraftURI: "https://w3c.github.io/json-ld-bp/",
         github: {
           repoURL: "https://github.com/w3c/json-ld-bp/",
