--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <script type="text/javascript" src="common/jsonld.js" class="remove"></script>
     <script class='remove'>
       var respecConfig = {
-        localBiblio: jsonld.localBiblio,
+        localBiblio: {
+          ...jsonld.localBiblio,
+          ...{
+            "swagger": {
+              "title": "Swagger: API Development for Everyone",
+              "href": "https://swagger.io"
+            },
+            "json-ld-best-practice-caching": {
+              "authors": [
+                "Manu Sporny",
+                "David Longley"
+              ],
+              "title": "JSON-LD Best Practice: Context Caching",
+              "href": "http://manu.sporny.org/2016/json-ld-context-caching/",
+              "date": "2016-04-24"
+            }
+          }
+        },
         specStatus: "DNOTE",
         copyrightStart:    "2019",
         shortName:  "json-ld-bp",
@@ -401,9 +418,6 @@
       ****"gender": "Male"****
     }
   </pre>
-  <p>See article in SEO Skeptic [[seo-strings-to-things]]
-    for further elaboration on the advantages
-    of using <em>things</em> instead of <em>strings</em>.</p>
 
   <div class="practice">
     <p class="practicedesc">
