fix typo after example 4

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     }
   </pre>
   <p>The only way to know this is a commit 
-    s to infer it based on the published API documentation,
+    is to infer it based on the published API documentation,
     and the fact that it was returned from an endpoint
     defined for retrieving information about commits.</p>
   <pre class="example"
